# wireviz_yaml_generator

./: .gitignore  .nojekyll  API.html  CLAUDE.md  LICENSE  MANIFEST.in  PYPI_PUBLISHING_GUIDE.md  README.md  config.toml  data_flow.html  gemini.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css  system_architecture.html
.claude/: settings.json
data/: master.db
docs/: API.md  README.md  _quarto.yml  build_docs.sh  data_flow.qmd  index.qmd  system_architecture.qmd
examples/: DATABASE_SCHEMA.md  README.md  example_input.csv  output_sample.bom.tsv  output_sample.html  output_sample.yaml
output/: JB1.yaml  JB2.yaml  JB3.yaml  JB4.yaml  all.yaml  output.yaml
plans/: 2026-02-21-csv-data-source.html  2026-02-21-regression-test-suite.html
sql_scripts/: csv_to_sql.py
src/: BuildAttachments.py  BuildFromSql.py  BuildYaml.py  InterfaceSqlYaml.py  LoadFromSql.py  ReadConfig.py  __init__.py  config_reader.py  csv_data_source.py  data_access.py  db_yml_interface.py  excel_writer.py  exceptions.py  interface.py  main.py  master.db  model.py  model_builder.py  models.py  protocols.py  sql_builder.py  sql_data_loader.py  sql_mapping.py  test.yaml  transformations.py  workflow_manager.py  yaml_builder.py
tests/: conftest.py  test_buildyaml.py  test_csv_data_source.py  test_harness_compiler.py  test_markdown_converter.py  test_project.py  test_transformations.py  test_workflow_manager.py
wireviz_yaml_generator/: BuildYaml.py  ReadConfig.py  __init__.py  csv_data_source.py  data_access.py  excel_writer.py  exceptions.py  main.py  models.py  (+4 more)
(+9 files in other folders)
