[project]
name = "wv-yml-generator"
version = "0.1"
description = "Wireviz YAML generator. Creates YAML file from sql database, calls wireviz to create drawings from YAML."
authors = [
    {name = "OleJBondahl"}
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "wireviz (>=0.4.1,<0.5.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "coverage (>=7.13.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
]
